--- a/VE_Open/XML/VE_XML.vcproj
+++ b/VE_Open/XML/VE_XML.vcproj
@@ -1,119 +1,183 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="VE_XML"
 	ProjectGUID="{E8FE9A1C-3985-407A-9648-FF2C2D025EA1}"
 	RootNamespace="VE_XML"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\XML\$(ConfigurationName)"
 			ConfigurationType="2"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VE_XML_LIBRARY"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				RuntimeTypeInfo="TRUE"
+				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="xerces-c_2d.lib"
 				OutputFile="$(OutDir)/VE_XML_d.dll"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(XERCESCROOT)\Build\Win32\VC7.1\Debug&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/VE_XML.pdb"
 				SubSystem="2"
 				ImportLibrary="$(OutDir)/VE_XML_d.lib"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\XML\$(ConfigurationName)"
 			ConfigurationType="2"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)\..&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VE_XML_LIBRARY"
 				RuntimeLibrary="2"
-				RuntimeTypeInfo="TRUE"
+				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="xerces-c_2.lib"
 				OutputFile="$(OutDir)/VE_XML.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(XERCESCROOT)\Build\Win32\VC7\Release"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/VE_XML.lib"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -122,152 +186,201 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
 			<File
-				RelativePath=".\Command.cxx">
+				RelativePath=".\Command.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\CreationEventHandler.cxx">
+				RelativePath=".\CreationEventHandler.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\DataValuePair.cxx">
+				RelativePath=".\DataValuePair.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\DOMDocumentManager.cxx">
+				RelativePath=".\DOMDocumentManager.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\FloatArray.cxx">
+				RelativePath=".\FloatArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDDoubleArray.cxx">
+				RelativePath=".\OneDDoubleArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDIntArray.cxx">
+				RelativePath=".\OneDIntArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDStringArray.cxx">
+				RelativePath=".\OneDStringArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\ParameterBlock.cxx">
+				RelativePath=".\ParameterBlock.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\StateInfo.cxx">
+				RelativePath=".\StateInfo.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\ThreeDDoubleArray.cxx">
+				RelativePath=".\ThreeDDoubleArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\ThreeDIntArray.cxx">
+				RelativePath=".\ThreeDIntArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\Transform.cxx">
+				RelativePath=".\Transform.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\TwoDDoubleArray.cxx">
+				RelativePath=".\TwoDDoubleArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\TwoDIntArray.cxx">
+				RelativePath=".\TwoDIntArray.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\User.cxx">
+				RelativePath=".\User.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLCreator.cxx">
+				RelativePath=".\XMLCreator.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLObject.cxx">
+				RelativePath=".\XMLObject.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLObjectFactory.cxx">
+				RelativePath=".\XMLObjectFactory.cxx"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLReaderWriter.cxx">
+				RelativePath=".\XMLReaderWriter.cxx"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
 			<File
-				RelativePath=".\Command.h">
+				RelativePath=".\Command.h"
+				>
 			</File>
 			<File
-				RelativePath=".\CreationEventHandler.h">
+				RelativePath=".\CreationEventHandler.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DataValuePair.h">
+				RelativePath=".\DataValuePair.h"
+				>
 			</File>
 			<File
-				RelativePath=".\DOMDocumentManager.h">
+				RelativePath=".\DOMDocumentManager.h"
+				>
 			</File>
 			<File
-				RelativePath=".\FloatArray.h">
+				RelativePath=".\FloatArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDDoubleArray.h">
+				RelativePath=".\OneDDoubleArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDIntArray.h">
+				RelativePath=".\OneDIntArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\OneDStringArray.h">
+				RelativePath=".\OneDStringArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ParameterBlock.h">
+				RelativePath=".\ParameterBlock.h"
+				>
 			</File>
 			<File
-				RelativePath=".\StateInfo.h">
+				RelativePath=".\StateInfo.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ThreeDDoubleArray.h">
+				RelativePath=".\ThreeDDoubleArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\ThreeDIntArray.h">
+				RelativePath=".\ThreeDIntArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\Transform.h">
+				RelativePath=".\Transform.h"
+				>
 			</File>
 			<File
-				RelativePath=".\TwoDDoubleArray.h">
+				RelativePath=".\TwoDDoubleArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\TwoDIntArray.h">
+				RelativePath=".\TwoDIntArray.h"
+				>
 			</File>
 			<File
-				RelativePath=".\User.h">
+				RelativePath=".\User.h"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLCreator.h">
+				RelativePath=".\XMLCreator.h"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLObject.h">
+				RelativePath=".\XMLObject.h"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLObjectFactory.h">
+				RelativePath=".\XMLObjectFactory.h"
+				>
 			</File>
 			<File
-				RelativePath=".\XMLReaderWriter.h">
+				RelativePath=".\XMLReaderWriter.h"
+				>
 			</File>
 			<Filter
 				Name="Resource Files"
 				Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-				UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
+				UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+				>
 				<File
-					RelativePath=".\verg.xsd">
+					RelativePath=".\verg.xsd"
+					>
 					<FileConfiguration
 						Name="dbg|Win32"
-						ExcludedFromBuild="TRUE">
+						ExcludedFromBuild="true"
+						>
 						<Tool
-							Name="VCXMLDataGeneratorTool"/>
+							Name="VCXMLDataGeneratorTool"
+						/>
 					</FileConfiguration>
 					<FileConfiguration
 						Name="Release|Win32"
-						ExcludedFromBuild="TRUE">
+						ExcludedFromBuild="true"
+						>
 						<Tool
-							Name="VCXMLDataGeneratorTool"/>
+							Name="VCXMLDataGeneratorTool"
+						/>
 					</FileConfiguration>
 					<File
-						RelativePath=".\verg.xsx">
+						RelativePath=".\verg.xsx"
+						>
 					</File>
 				</File>
 			</Filter>
